# fabularium

./: .gitignore  .gitmodules  AndroidManifest.xml  README.md  build.gradle
app/src/main/jni/: CMakeLists.txt  README.txt
app/src/main/jni/diffs/: git.diff  glulxe.diff  magnetic.diff  tads.diff
app/src/main/jni/glk/: glk.c  glk.h
app/src/main/jni/terps/advsys/: LICENSE
app/src/main/jni/terps/alan/alan2/: Makefile.unix  alan.version  glkstart.c  main.c  readline.c
app/src/main/jni/terps/alan/alan3/: LASTRELEASE  Makefile.Darwin  Makefile.cygwin  NEXTRELEASE
app/src/main/jni/terps/alan/alan3/bugs/2009-10-06/: messages.i  verbs.i
app/src/main/jni/terps/alan/alan3/compiler/: .cproject  .gdbinit  Makefile.Darwin  Makefile.common  Makefile.cygwin  Makefile.thoni  add.c  advTest.c  alan.atg  alan.c  alan.pmk  alanide.used.atg  article.c  article_x.h  atr.h  atr.mock  atrTest.c  atr_tests.c  cla.h  emit.mock  encode.h  encode.mock  exp.h  ext.h  id_tests.c  ifidTest.c  initialize.c  ins.h  lstTest.c  lst_x.h  macSpa.c  msg.h  opt.h  prop.h  res.h  resourceTest.c  rul_x.h  smScSema.mock  smScan.c  smScan.h  (+19 more)
app/src/main/jni/terps/alan/alan3/converter/: a2a3.c  a2a3.version.h  dependencies.mk  lmList.h  str.c  token.h
app/src/main/jni/terps/alan/alan3/games/rebaked/: help.i  (+14 more)
app/src/main/jni/terps/alan/alan3/gdb/: readme.txt
app/src/main/jni/terps/alan/alan3/grapher/: alangrapher.py
app/src/main/jni/terps/alan/alan3/images/: logo.icns
app/src/main/jni/terps/alan/alan3/interpreter/: MacArun.sh  Makefile.Linux  Makefile.common  add_unittests.include  arun.rc  attribute.mock  debug.mock  gargoyle-alan3-installer.pkgproj  lists.mock  msg.mock  parseTests.c  save.mock  sources.mk  state.mock  syserr.mock
app/src/main/jni/terps/alan/alan3/regression/: .gitignore  actor.alan  actor.input  actorContainer.expected  addAll.expected  addArticle.alan  addContainer.alan  addDescription.expected  addDescriptionCheck.alan  addEntered.alan  addMentioned.alan  addPronoun.input  addScript.alan  addScript.expected  addScript.input  addedAttributes.input  addedVerb.alan  addedVerb.expected  aggregateMin.expected  aggregationOverRecursiveContainerWithInstanceNotHavingAttribute.expected  all.expected  allExcept.input  allowAccessToActuallyContainedAttribute.expected  alternativeChecks.expected  arithmeticAggregates.alan  article1.expected  askQuit.input  attribute2.alan  attributeToLocal.expected  bodyExecution.alan  but.input  capitalizePrintSymbolFirst.expected  capsName.alan  checkWhenRun.expected  classFilterInVerbBodyWithDefaultSyntax.input  clock.expected  containerLimit.input  containerListings.expected  containerRestriction1.alan  countInIntegerSet.alan  (+265 more)
app/src/main/jni/terps/alan/alan3/samples/: exits.alan  exits.expected
app/src/main/jni/terps/bocfel/: bocfel.6
app/src/main/jni/terps/git/: Makefile.win  git.h
app/src/main/jni/terps/git/win/: git.rc
app/src/main/jni/terps/hugo/source/: hccomp.c  hcpass.c  hcres.c  hcreset.c  hd.c  hddecode.c  hdmisc.c  hdwindow.c
app/src/main/jni/terps/level9/: bitmap.c  porting.txt
app/src/main/jni/terps/level9/DOS/: dos.c
app/src/main/jni/terps/level9/Gtk/: Makefile  NEWS  graphics.c  text.h
app/src/main/jni/terps/level9/Unix/: unix-curses.c
app/src/main/jni/terps/level9/Win/: Compile.txt  Lev9win.cpp  Level9.rc  resource.h
app/src/main/jni/terps/level9/Win/Classlib/: app.cpp  bitmapc.cpp  cacheini.cpp  colorbtn.cpp  dlgwnd.cpp  edit.cpp  edit.h  eval.cpp  event.cpp  filedlg.cpp  font.cpp  hashwnd.h  matrix.h  numedit.cpp  object.cpp  parse.h  statbar.cpp  stringc.cpp  vectorc.h
app/src/main/jni/terps/level9/Win/Help/: Level9.hhp  graphics.htm  introduction.htm
app/src/main/jni/terps/magnetic/Dos/: build.txt  lfread.c  makefile  showpng.c
app/src/main/jni/terps/magnetic/Generic/: main.c  xtractpc.c
app/src/main/jni/terps/magnetic/Gtk/: BUGS  gui.h  hints.c  hints.h  sound_smpeg.c  util.h  version.h
app/src/main/jni/terps/magnetic/Libraries/mfc/: ColourButton.cpp  Dialogs.h
app/src/main/jni/terps/magnetic/Scripts/: Guild.rec  Myth.rec  Pawn.rec
app/src/main/jni/terps/magnetic/Win/: GfxLink.vcproj  Magnetic.cpp  Magnetic.rc  Magnetic.sln  MagneticTitle.h  OptionsDlg.h  ScrollBackDlg.cpp  ScrollBackDlg.h  StdAfx.h  XtractMW.vcproj
app/src/main/jni/terps/magnetic/Win/amp11/: amp1dec.cpp  ampdec.h  ampsynth.cpp
app/src/main/jni/terps/magnetic/Win/help/: Magnetic.hhc  Magnetic.hhp  graphics.htm  menus.htm  options.htm  stories_c64.htm
app/src/main/jni/terps/magnetic/Win/res/: Magnetic.manifest
app/src/main/jni/terps/scare/doc/: BUILDING  DEBUGGER  FEATURES
app/src/main/jni/terps/scare/test/: darkwoods.scr  humbug.taf  sccore.amf  scevents.taf  scnpcs.amf  screstrs.taf  scrooms.amf  scvars.amf  scvars.taf  wrecked.scr  wrecked.taf
app/src/main/jni/terps/scott/gargoyle/: Make.gargoyle
app/src/main/jni/terps/tads/: oemfab.c
app/src/main/jni/terps/tads/tads2/: os.h
app/src/main/jni/terps/tads/tads2/msdos/: help.tdb  t2r32.rc
app/src/main/jni/terps/tads/tads3/: resfind.h  vmtz.cpp
app/src/main/jni/terps/tads/tads3/tz/: timezones.t3tz  tz.t
app/src/main/jni/terps/tads/tads3/unidata/: UnicodeData.txt
app/src/main/jni/utilities/babel/: README  babel.c  babel.h  babel_handler.c  babel_handler.h  babel_ifiction_functions.c  babel_story_functions.c  blorb.c  ifiction.c  ifiction.h  makefile  modules.h  register.c  register_ifiction.c  tads.c
app/src/main/jni/utilities/babel/babel-get/: babel-get.c  get_dir.c  get_ifiction.c  get_story.c  get_url.c  makefile
app/src/main/jni/utilities/babel/extras/: babel-list.c  hotload.c  hotload.h  ifiction-aggregate.c  ifiction-xtract.c  simple-marry.c
app/src/main/jni/utilities/inform/: COPYING  Makefile  inform.1
app/src/main/jni/utilities/inform/docs/: README.library  README.translation  README.version
app/src/main/jni/utilities/inform/include/: smartcantgo.h  sound.h  torch.h
app/src/main/jni/utilities/inform/lib/: english.h  verblibm.h
app/src/main/jni/utilities/inform/src/: ReleaseNotes.html
app/src/main/jni/utilities/inform/tutor/: house01.inf
(+3176 files in other folders)
